--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,12 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.3",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
